[tool.poetry]
name = "fastparking-api"
version = "1.6.12"
description = "GoIT DataScience Team Project - Fast Parking API module"
authors = ["neuron_curva_bobr <info@neuron.curva.bobr.app>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "*"
uvicorn = "*"
python-dotenv = "*"
python-multipart = "*"
numpy = "*"
opencv-python-headless = {version = "*", platform = "linux"}
opencv-python = {version = "*", platform = "win32 || darwin"}
opencv-contrib-python-headless = "*"
matplotlib = "*"
tensorflow-io-gcs-filesystem = [
    { version = "^0.31", markers = "sys_platform == 'win32'" },
    { version = "*", markers = "sys_platform == 'linux' or sys_platform == 'darwin'" }
]
tensorflow = [
    { version = "~2.15", markers = "sys_platform == 'win32'" },
    { version = "*", markers = "sys_platform == 'linux' or sys_platform == 'darwin'" }
]
keras = [
    { version = "~2", markers = "sys_platform == 'win32'" },
    { version = "*", markers = "sys_platform == 'linux' or sys_platform == 'darwin'" }
]
pydantic = "*"
pydantic-settings = "*"
jinja2 = "*"
websockets = "*"
anyio = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
