[tool.poetry]
name = "fastparking"
version = "0.1.0"
description = "GoIT DataScience Team Project - Fast Parking"
authors = ["neuron_curva_bobr <info@neuron.curva.bobr.app>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
Django = "^5.0.4"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
pytz = "^2024.1"
qrcode = "^7.4.2"
pillow = "^10.3.0"
psycopg2-binary = "^2.9.9"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "^2.16.1"
opencv-python-headless = {version = "^4.9.0.80", platform = "linux"}
opencv-python = {version = "^4.9.0.80", platform = "!linux"}
matplotlib = "^3.8.4"
scikit-learn = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
