[tool.poetry]
name = "fastparking"
version = "0.5.17"
description = "GoIT DataScience Team Project - Fast Parking"
authors = ["neuron_curva_bobr <info@neuron.curva.bobr.app>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
Django = "^5.0.6"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
pytz = "^2024.1"
qrcode = "^7.4.2"
pillow = "^10.3.0"
psycopg2-binary = "^2.9.9"
tensorflow-io-gcs-filesystem = "~0.31"
tensorflow = "~2.15"
opencv-python-headless = {version = "^4.9.0.80", platform = "linux"}
opencv-python = {version = "^4.9.0.80", platform = "win32 || darwin"}
matplotlib = "^3.8.4"
scikit-learn = "^1.4.2"
django-filter = "^24.2"
django-tables2 = "^2.7.0"
pdf2image = "^1.17.0"

[tool.poetry.group.dev.dependencies]
scikit-learn = "^1.4.2"
# opencv-python = "^4.9.0.80"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
